--- a/Javascript/15-bootstrap/projeto-galeria/src/index.html
+++ b/Javascript/15-bootstrap/projeto-galeria/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <header wm-include="./pages/template/header.html"></header>
     <main class="bg-light" wm-include="/pages/galery/galery.html"></main>
-    
+    <footer class="footer py-3 " wm-include="/pages/template/footer.html"></footer>
     <script src="app.js"></script>
 </body>
 
