--- a/Javascript/17-Vue/sales/index.html
+++ b/Javascript/17-Vue/sales/index.html
@@ -9,30 +9,9 @@
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" :click="getSales">
         <div class="container">
-            <h1 class="mt-3">{{ title }}</h1>
-
-            <!-- <table class="mt-5 table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>NOME</th>
-                        <th>PREÇO</th>
-                        <th>QTDE</th>
-                        <th>DATA</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="sale in sales">
-                        <td>{{ sale.id }}</td>
-                        <td>{{ sale.name }}</td>
-                        <td v-money="'RS'">{{ sale.price }}</td>
-                        <td>{{ sale.qtde }}</td>
-                        <td>{{ sale.date }}</td>
-                    </tr>
-                </tbody>
-            </table> -->
+            <h1>{{ title }}</h1>
 
             <table class="mt-5 table" v-if="salesByProduct">
                 <thead>
@@ -44,7 +23,7 @@
                 </thead>
                 <tbody>
                     <tr v-for="(sale, index) in salesByProduct">
-                        <td>#{{ index + 1}}</td>
+                        <td># {{ index + 1 }} </td>
                         <td>{{ sale.name }}</td>
                         <td v-money="'R$'">{{ sale.value }}</td>
                     </tr>
@@ -53,27 +32,50 @@
                     <tr>
                         <td>+</td>
                         <td>TOTAL</td>
-                        <td v-money="'RS'">{{ calculateTotal(salesByProduct) }}</td>
+                        <td v-money="'R$'"> {{ calculateTotal(salesByProduct) }}</td>
                     </tr>
                 </tfoot>
             </table>
+
+            <!-- <table class="mt-5 table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>NOME</th>
+                        <th>PREÇO</th>
+                        <th>Qtde</th>
+                        <th>DATA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="sale in sales">
+                        <td>{{ sale.id }}</td>
+                        <td>{{ sale.name }}</td>
+                        <td v-money="'R$'">{{ sale.price }}</td>
+                        <td>{{ sale.qtde }}</td>
+                        <td>{{ sale.date }}</td>
+
+                    </tr>
+                </tbody>
+            </table> -->
         </div>
     </div>
     <script>
-        Vue.directive('money', {
+        Vue.directive(`money`, {
             inserted(el, binding) {
-                const amount = parseFloat(el.innerHTML).toFixed(2)
-                    .replace('.',',')
-                    .replace(/(\d)(?=(\d{3})+\,)/g, '$1.')
-                el.innerHTML =`${binding.value} ${amount}`
+                const amount = el.innerHTML
+                el.innerHTML = Number(amount)
+                    .toLocaleString('pt-br', {
+                        style: 'currency',
+                        currency: 'BRL',
+                    })
             }
         })
 
-
-        new Vue ({
+        new Vue({
             el: "#app",
             data: {
-                title: 'Relatorio de vendas',
+                title: 'Relatorio de Vendas',
                 sales: null
             },
             methods: {
@@ -84,7 +86,8 @@
                 },
                 calculateTotal(sales) {
                     if (!sales) return 0
-                    return sales.reduce((total, sale) => total + sale.value, 0 )
+
+                    return sales.reduce((total, sale) => total + sale.value, 0)
                 }
             },
             computed: {
@@ -92,7 +95,7 @@
                     if (!this.sales) return null
 
                     const salesByProduct = this.sales.reduce((grouped, sale) => {
-                        if (!grouped.hasOwnProperty(sale.name)){
+                        if (!grouped.hasOwnProperty(sale.name)) {
                             grouped[sale.name] = {
                                 name: sale.name,
                                 value: sale.price * sale.qtde
@@ -107,10 +110,10 @@
                     return Object.values(salesByProduct)
                 }
             },
-            mounted(){
+            mounted() {
+                /*MOUNTED  EXECUTA QUANDO O ELEMENTO(el) FOR CRIADO*/
                 this.getSales()
             }
-
         })
     </script>
 </body>
