--- a/Javascript/18-electron/electron-react/public/index.html
+++ b/Javascript/18-electron/electron-react/public/index.html
@@ -28,6 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>
+      window.api.receive("fromMain", (data) => {
+          console.log(`Received ${data} from main process`);
+      });
+      window.api.send("toMain", "some data");
+  </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
